2002-08-20  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* gas/mips/empic.d: Treat "addiu" and "daddiu" as equivalent when
	$0 is source.

2002-08-06  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2002-08-01  H.J. Lu <hjl@gnu.org>
	* gas/mips/elf-rel6.s: Add ".p2align 4".
	* gas/mips/elf-rel6.d: Check nop.

2002-08-01  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2002-08-01  Richard Sandiford  <rsandifo@redhat.com>
	* gas/mips/elf-rel6.[sd]: New test.
	* gas/mips/mips.exp: Run it.

2002-07-30  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2002-07-29  Chris Demetriou  <cgd@broadcom.com>
	* gas/mips/elf_ase_mips16.d: New file to test ELF MIPS16 ASE marking.
	* gas/mips/elf_ase_mips16.s: Likewise.
	* gas/mips/mips.exp: Run the new test.

2002-07-26  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/altivec.d: Invoke "as" with "-a32".

2002-07-19  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix/list-pseudoints.l: Adjust for changes in gas section
	padding.
	* gas/mmix/greg7.d: Ditto.
	* gas/mmix/greg8.d: Ditto.
	* gas/mmix/fb-2.d: Ditto.
	* gas/mmix/comment-1.d: Ditto.
	* gas/mmix/byte-1.d: Ditto.

2002-07-17  H.J. Lu <hjl@gnu.org>

	* gas/ia64/dv-branch.d: Updated.
	* gas/ia64/opc-b.d: Likewise.

2002-07-08  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/intel16.s: New.
	* gas/i386/intel16.d: New.
	* gas/i386/i386.exp: Run it.

2002-07-03  Alan Modra  <amodra@bigpond.net.au>

	* lib/gas-defs.exp (run_dump_test): Run objdump/nm/objcopy/readelf
	with LC_ALL=C to ensure consistent sorting.

2002-06-18  Dave Brolley  <brolley@redhat.com>

	* gas/frv: New testsuite.

Mon Jun 17 16:23:59 2002  J"orn Rennecke <joern.rennecke@superh.com>

	* gas/sh/dsp.s: Add three more instructions.
	* gas/sh/dsp.d: Update.

2002-06-14  Daniel Jacobowitz  <drow@mvista.com>

	* gas/mips/lineno.d: Use --gstabs.
	* gas/mips/mips.exp (lineno.s): Remove XFAIL.

2002-06-12  Tom Rix  <trix@redhat.com>
