@@ -1,3 +1,9 @@
+2002-08-26  Alan Modra  <amodra@bigpond.net.au>
+
+	* gas/tic54x/align.s: Add comment.
+	* gas/tic54x/align.d: Adjust .text size for 2002-05-23 write.c change.
+	* gas/tic54x/extaddr.d: Similarly adjust disassembly tail.
+
 2002-08-20  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>
 
 	* gas/mips/empic.d: Treat "addiu" and "daddiu" as equivalent when
